--- a/src/Components/NavBar/NavLinks/NavLinks.module.scss
+++ b/src/Components/NavBar/NavLinks/NavLinks.module.scss
@@ -11,6 +11,8 @@
   font-size: 1.5rem;
   transition: 0.2s;
   position: relative;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
 
   &:hover {
     color: colors(light);
