--- a/src/Components/NavBar/NavLinks/NavLinks.module.scss
+++ b/src/Components/NavBar/NavLinks/NavLinks.module.scss
@@ -2,6 +2,8 @@
 
 .navLinks {
   display: flex;
+  align-items: center;
+  height: 80px;
 }
 
 .navLink {
@@ -32,5 +34,26 @@
     bottom: -5px;
     left: -5%;
     transition: 0.2s;
+  }
+}
+
+.cta {
+  background: colors(white);
+  color: colors(red);
+  font-size: 1.5rem;
+  width: 150px;
+  padding: 0.3rem 0;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 50px;
+  font-family: Roboto, "sans-serif";
+  cursor: pointer;
+  border: 4px solid colors(red);
+  transition: 0.2s;
+  margin: 0 0.5rem;
+
+  &:hover {
+    color: colors(white);
+    background: colors(red);
   }
 }
