Alignment Changes in Social Handles

--- a/src/Components/Social Handles/SocialHandles.module.scss
+++ b/src/Components/Social Handles/SocialHandles.module.scss
@@ -4,7 +4,8 @@
   display: flex;
   list-style: none;
   flex-flow: column;
-  height: 2rem;
+  height: 100%;
+  align-items: center;
 
   @include desktop-view {
     flex-flow: row;
