--- a/src/Components/HeroBox/HeroBox.module.scss
+++ b/src/Components/HeroBox/HeroBox.module.scss
@@ -14,10 +14,19 @@
 .title {
   font-size: 4rem;
   span {
-    background-image: -webkit-linear-gradient(180deg, #f35626, #feab3a);
+    background-image: -webkit-linear-gradient(
+      -60deg,
+      #bb2cd9,
+      #7cec9f,
+      #ea7773,
+      #e74292,
+      #e73c7e,
+      #74b9ff
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -webkit-animation: nameColor 5s infinite linear;
+    background-size: 1000%;
+    -webkit-animation: nameColor 10s ease-in-out infinite;
   }
 }
 
@@ -27,10 +36,13 @@
 }
 
 @keyframes nameColor {
-  from {
-    -webkit-filter: hue-rotate(0deg);
+  0% {
+    background-position: 0 50%;
   }
-  to {
-    -webkit-filter: hue-rotate(-360deg);
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
   }
 }
