--- a/src/Components/HeroBox/HeroBox.module.scss
+++ b/src/Components/HeroBox/HeroBox.module.scss
@@ -20,13 +20,14 @@
       #7cec9f,
       #ea7773,
       #e74292,
+      #53e0bc,
       #e73c7e,
       #74b9ff
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 1000%;
-    -webkit-animation: nameColor 10s ease-in-out infinite;
+    -webkit-animation: nameColor 10s infinite;
   }
 }
 
