--- a/src/Containers/Scroll Pop Up/ScrollPopUp.module.scss
+++ b/src/Containers/Scroll Pop Up/ScrollPopUp.module.scss
@@ -1,4 +1,30 @@
+@import "src/Global/SASS/variables";
+
 .scrollPopUp {
   position: absolute;
-   bottom: 150px;
+  left: 50%;
+  bottom: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  font-family: Roboto, sans-serif;
+  border-radius: 50px;
+  color: colors(red);
+  background: colors(white);
+  transform: translateX(-50%);
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+  font-size: 1.8rem;
+  padding: 0.3rem;
+  width: 175px;
+  &:hover {
+    background: colors(red);
+    color: colors(white);
+  }
+
+  @include desktop-view {
+    width: 12rem;
+    font-size: 2rem;
+    padding: 0.5rem 0.5rem;
+  }
 }
