--- a/src/Containers/Scroll Pop Up/ScrollPopUp.module.scss
+++ b/src/Containers/Scroll Pop Up/ScrollPopUp.module.scss
@@ -1,6 +1,7 @@
 @import "src/Global/SASS/variables";
 
 .scrollPopUp {
+  opacity: 0;
   position: absolute;
   left: 50%;
   bottom: 150px;
@@ -11,12 +12,16 @@
   border-radius: 50px;
   color: colors(red);
   background: colors(white);
-  transform: translateX(-50%);
+  transform: translate(-50%, 150px);
   transition: 0.2s ease-in-out;
   cursor: pointer;
   font-size: 1.8rem;
   padding: 0.3rem;
   width: 175px;
+  -webkit-animation-delay: 1s;
+  -moz-animation-delay: 1s;
+  -o-animation-delay: 1s;
+  animation-delay: 1s;
   &:hover {
     background: colors(red);
     color: colors(white);
@@ -27,4 +32,9 @@
     font-size: 2rem;
     padding: 0.5rem 0.5rem;
   }
+}
+
+.show {
+  opacity: 1;
+  transform: translate(-50%, 0);
 }
