--- a/src/Components/NavBar/NavLinks/NavLinks.module.scss
+++ b/src/Components/NavBar/NavLinks/NavLinks.module.scss
@@ -22,6 +22,11 @@
   font-family: "Roboto", sans-serif;
   font-weight: bold;
 
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
   &:hover {
     color: colors(light);
     &:after {
