--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@ body {
   overflow-x: hidden;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .test {
   width: 100vw;
   height: 100vh;
