--- a/src/Components/Skills/Skills.module.scss
+++ b/src/Components/Skills/Skills.module.scss
@@ -17,6 +17,7 @@
   font-family: Roboto, "sans-serif";
   font-size: 4rem;
   text-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  text-transform: uppercase;
 }
 
 .SkillsListContainer {
@@ -28,4 +29,11 @@
   border-radius: 10px;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.13);
   border: 1px solid black;
+}
+
+.button {
+  position: absolute;
+  bottom: -24px;
+  left: 50%;
+  transform: translateX(-50%);
 }
