--- a/src/Containers/Skills List/SkillsList.module.scss
+++ b/src/Containers/Skills List/SkillsList.module.scss
@@ -1,3 +1,36 @@
+@import "src/Global/SASS/variables";
+
 .SkillsList {
-	color: red($color: #000000);
+  display: grid;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  max-height: 300px;
+
+  @include tab-view {
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
+  }
+
+  @include desktop-view {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    margin-bottom: 0;
+  }
+}
+
+.skill {
+  display: flex;
+  flex-flow: column;
+  height: 130px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.image {
+  width: 4rem;
+  height: 4rem;
+}
+
+.name {
+  font-size: 1.5rem;
 }
