--- a/src/Global/Buttons/Buttons.module.scss
+++ b/src/Global/Buttons/Buttons.module.scss
@@ -12,6 +12,7 @@
   transition: 0.2s;
   font-weight: bold;
   outline: none;
+  width: 200px;
   &:hover {
     box-shadow: 0 0 20px -4px rgba(0, 0, 0, 0.7);
   }
