--- a/src/Components/Project/Project.module.scss
+++ b/src/Components/Project/Project.module.scss
@@ -7,11 +7,12 @@
   justify-content: space-between;
   height: 325px;
 }
+
 .imageContainer {
   position: relative;
-
+  cursor: pointer;
   &:before {
-    transition: 0.2s ease-in-out;
+    transition: 0.1s ease-in-out;
     position: absolute;
     content: "";
     background: rgba(234, 119, 115, 0.9);
@@ -39,4 +40,21 @@
 .name {
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+.buttons {
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-evenly;
+  opacity: 0;
+  transition: 0.2s;
+}
+
+.show {
+  opacity: 100%;
 }
