--- a/src/Components/ProjectLinks/ProjectLink.module.scss
+++ b/src/Components/ProjectLinks/ProjectLink.module.scss
@@ -1,2 +1,16 @@
 .root {
+  background: #fff;
+  padding: 0.8rem 1rem;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  min-width: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.icon {
+  width: 26px;
+  height: 26px;
 }
