--- a/src/Components/Project/Project.module.scss
+++ b/src/Components/Project/Project.module.scss
@@ -53,8 +53,10 @@
   justify-content: space-evenly;
   opacity: 0;
   transition: 0.2s;
+  pointer-events: none;
 }
 
 .show {
   opacity: 100%;
+  pointer-events: all;
 }
