Send Button completed and minor ui bugs fixed

--- a/src/Components/Forms/ContactUsForm.module.scss
+++ b/src/Components/Forms/ContactUsForm.module.scss
@@ -37,5 +37,22 @@
 }
 
 .button {
-  margin: 1rem;
+  margin: 0.5rem 1rem;
+  font-size: 1.5rem;
+  width: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  border: none;
+  background: #6c63ff;
+  color: #fff;
+  cursor: pointer;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+}
+
+.icon {
+  width: 20px;
+  height: 20px;
 }
