--- a/src/Containers/Footer/Footer.module.scss
+++ b/src/Containers/Footer/Footer.module.scss
@@ -5,7 +5,7 @@
   flex-flow: column;
   justify-content: space-between;
   align-items: center;
-  padding: 5rem 0;
+  padding: 1rem;
 }
 
 .annotation {
