--- a/src/Components/Project/Project.module.scss
+++ b/src/Components/Project/Project.module.scss
@@ -1,16 +1,18 @@
+@import "src/Global/SASS/variables";
+
 .root {
   max-width: 500px;
   width: 90vw;
   display: flex;
   flex-flow: column;
   align-items: center;
-  justify-content: space-between;
   height: 325px;
 }
 
 .imageContainer {
   position: relative;
   cursor: pointer;
+
   &:before {
     transition: 0.1s ease-in-out;
     position: absolute;
@@ -40,6 +42,10 @@
 .name {
   font-size: 1.5rem;
   font-weight: bold;
+  margin-top: 1rem;
+  @include tab-view {
+    margin-top: 1.5rem;
+  }
 }
 
 .buttons {
