--- a/src/Components/Skills/Skills.module.scss
+++ b/src/Components/Skills/Skills.module.scss
@@ -3,7 +3,7 @@
 .Skills {
   position: relative;
   z-index: 10;
-  width: 100vw;
+  width: 100%;
   padding-top: 5rem;
   padding-bottom: 10rem;
   display: flex;
