--- a/src/Components/Forms/ContactUsForm.module.scss
+++ b/src/Components/Forms/ContactUsForm.module.scss
@@ -50,6 +50,11 @@
   color: #fff;
   cursor: pointer;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+  outline: none;
+  transition: 0.2s;
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+  }
 }
 
 .icon {
