--- a/src/Components/Forms/ContactUsForm.module.scss
+++ b/src/Components/Forms/ContactUsForm.module.scss
@@ -22,6 +22,11 @@
   padding: 0 1rem;
   outline: none;
   border: 1px solid #747474;
+  transition: 0.1s;
+  &:focus {
+    border-width: 2px;
+    border-color: #67e6dc;
+  }
 }
 
 .textArea {
@@ -34,11 +39,18 @@
   font-family: "Roboto", sans-serif;
   outline: none;
   border: 1px solid #747474;
+  transition: 0.1s;
+  &:focus {
+    border-width: 2px;
+    border-color: #67e6dc;
+  }
 }
 
 .button {
-  margin: 0.5rem 1rem;
+  margin: 0.5rem 1rem 4rem;
+
   font-size: 1.5rem;
+  align-self: center;
   width: 8rem;
   display: flex;
   align-items: center;
@@ -54,6 +66,11 @@
   transition: 0.2s;
   &:hover {
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+  }
+
+  @include desktop-view {
+    align-self: flex-start;
+    margin: 0.5rem 1rem;
   }
 }
 
