--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #2c3335;
   overflow-x: hidden;
