--- a/src/Components/Project/Project.module.scss
+++ b/src/Components/Project/Project.module.scss
@@ -18,23 +18,18 @@
     position: absolute;
     content: "";
     background: rgba(234, 119, 115, 0.9);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 0;
-    height: 0;
-  }
-
-  &:hover {
-    &:before {
-      width: 100%;
-
-      height: 100%;
-      position: absolute;
-      content: "";
-    }
+    transform: scale(0);
+    width: 100%;
+    height: 100%;
   }
 }
+
+.showImageBackground {
+  &:before {
+    transform: scale(1);
+  }
+}
+
 .image {
   width: 100%;
 }
