--- a/src/Components/HeroBox/HeroBox.module.scss
+++ b/src/Components/HeroBox/HeroBox.module.scss
@@ -18,6 +18,7 @@
   font-family: "Open Sans", "sans-serif";
   font-weight: bold;
   color: colors(white);
+  transition: 0.2s;
   @include tab-view {
     align-items: center;
     margin-left: 0;
